# qa-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  runtests.sh  test_runner.cc
.github/workflows/: main.yaml
doc/: TODO.md
include/: allocator.hpp  assem.hpp  ast.hpp  asttraits.hpp  codegen.hpp  driver.hpp  lexer.hpp  lower_ir.hpp  parser.hpp  qa_ir.hpp  qa_x86.hpp  st.hpp  syntax_utils.hpp  token.hpp  translate.hpp
scripts/: build.sh  check_format.sh  clean.sh  format.sh  test.sh
src/: allocator.cpp  allocator.hpp  assem.cpp  assem.hpp  ast.cpp  ast.hpp  asttraits.hpp  codegen.cpp  codegen.hpp  driver.cpp  driver.hpp  lexer.cpp  lexer.hpp  location.cpp  location.hpp  lower_ir.cpp  lower_ir.hpp  main.cpp  operation.cpp  operation.hpp  optimizer.cpp  optimizer.hpp  parser.cpp  parser.hpp  qa_ir.cpp  qa_ir.hpp  qa_x86.cpp  qa_x86.hpp  st.cpp  st.hpp  syntax_utils.cpp  syntax_utils.hpp  system.hpp  token.hpp  translate.cpp  translate.hpp
tests/: test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test2.c  test20.c  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c  test27.c  test28.c  test29.c  test3.c  test30.c  test31.c  test32.c  test33.c  test34.c  test35.c  test36.c  test37.c  test38.c  test39.c  test4.c  test40.c  test41.c  test42.c  test43.c  test44.c  test45.c  (+26 more)
tests/sources/: for_loop_decrement.c  for_loop_increment.c  int_assignment.c  int_deref_addition.c  int_equality_eq_negative.c  int_equality_eq_positive.c  int_equality_neq_negative.c  int_equality_neq_positive.c  int_gt_if_statements.c  int_return.c  int_swap.c  (+4 more)
